# Software-engineering

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  data.js  data.sql  docker-compose.yaml  docker-compose.yml  openapi.yaml  optimization.md  queries.js  queries.sql  readme.md  schema.sql  schema_design.md  validation.js  workspace.dsl
docs/decisions/: 0001-service-boundaries.md  0002-async-notifications-outbox.md
docs/system/: 01-architecture-overview.md  02-domain-primitives.md
docs/testing/: traceability-matrix.md
include/car_rental/: database.h  errors.h  models.h  mongo_database.h  postgres_database.h  security.h  server.h  services.h  sqlite_utils.h  stores.h  utils.h
labs/lab01/: README.md
labs/lab02/: README.md
labs/lab03/: README.md
labs/lab04/: README.md
src/: database.cpp  errors.cpp  main.cpp  mongo_database.cpp  security.cpp  server.cpp  services.cpp  stores_mongo.cpp  stores_postgres.cpp  utils.cpp
tests/: auth_tests.cpp  fleet_tests.cpp  rentals_tests.cpp  smoke_tests.cpp  test_support.cpp  test_support.h  users_tests.cpp
